2, Aug, 2016: bugfix update cpsdio, libcpsdio : 	(1) Added DI-**xL, DO-**xL.  	(2) Added ContecCpsDioSetInternalPowerSupply and ContecCpsDioGetInternelPowerSupply function.
8250_cpscom :
	(1) Fixed Set AutoRS485 Half-Duplex Mode.

cpsaio, libcpsaio :
	(1) Fixed IOCTL_CPSAIO_SET_CALIBRATION_AI and
IOCTL_CPSAIO_SET_CALIBRATION_AO wait 500 msec after setting.
	(2) Moved spin_unlock_irqrestore of eeprom_function.
	
cpsssi, libcpsssi :
	(1) Moved spin_unlock_irqrestore of eeprom_function.

cps-driver :
	(1) Added __contec_cps_before_shutdown_wait_devices function.
	(2) Many eeprom functions add spinlock_irqsave / spin_unlock.
	(3) Fixed unbreak
CPS_CHILD_UNIT_INF_MC341B_10,CPS_CHILD_UNIT_INF_MC341B_20 and
CPS_CHILD_UNIT_JIG_MC341B_00 unit.
	(4) Change from cps_common_inpbfunction to contec_mcs341_inpb function.
	(5) Change the cps_common_mem_release function from
CPS_COMMON_MEM_NONREGION to CPS_COMMON_MEM_REGION.
	(6) Added contec_mcs341_device_outw and contec_mcs341_device_inpw
functions.
	(7) Fixed mcs341_controller_timer_function of reset_button_check_mode
sequence.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 *.[ao]
 *.so.*
 *.ko
-sample/ssi/etc/
 help/
+driver/ctrl/
 driver/release/
 lib/release/
+driver/cnt/
+lib/cnt/
+sample/ssi/etc/
+sample/cnt/
+
