Fiexd : 24, Aug, 2016 (1) <system> sleepとudelayを使い分けるようにcps-driver変更。また、sleepを使用しているド上位ドライバも変更 (2)  ＜aio, ssi, dio> ドライバオープンに失敗した後、再度オープンすると NULL pointerが発生する問題を修正。 (3)  <aio, libCpsAio> AioMultiAiを使用時、たまにデータが 0(hex)になる問題を修正 (4) Makefileを CONPROSYS_SDKで使用できるように修正

--- a/driver/system/Makefile
+++ b/driver/system/Makefile
@@ -3,22 +3,36 @@ obj-m := cps-driver.o
 #KERNELDIR ?= /lib/modules/$(shell uname -r)/build
 PWD       := $(shell pwd)
 
-EXTRA_CFLAGS	:= -DDEBUG=0
-
 #cross build 
 CROSS_COMPILE=arm-linux-gnueabi-
 ARCH=arm
-KERNELDIR ?= /home/contec/workspace/sdk/CPS_SDK/kernel #target kernel source path
+
+# CPS_SDK_MACRO_CHECK ( without CONPROSYS SDK )
+ifneq "$(CPS_SDK_INSTALL_FULLDIR)" ""
+TARGET_ROOTFS   := rootfs
+endif
+
+EXTRA_CFLAGS	:= -DDEBUG=0
+
+ifeq "$(CPS_SDK_ROOTDIR)" ""
+#KERNELDIR ?= /lib/modules/$(shell uname -r)/build　##target kernel source path ( self build )
+KERNELDIR ?= /home/contec/workspace/sdk/CPS_SDK/kernel #target kernel source path ( static path )
+CPS_DRIVER_REELASE_DIR:=../release/
+else
+KERNELDIR ?= $(CPS_SDK_ROOTDIR)/kernel
+CPS_DRIVER_REELASE_DIR:=../../release/
+EXTRA_CFLAGS	+= -DCONFIG_CONPROSYS_SDK
+endif
 
 all:
 	$(MAKE) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNELDIR) M=$(PWD) modules
 #	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
 
 modules_install:
-	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
+	$(MAKE) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNELDIR) M=$(PWD) modules_install INSTALL_MOD_PATH=${CPS_SDK_INSTALL_FULLDIR}/$(TARGET_ROOTFS)
 
 release_copy:
-	cp ./cps-driver.ko ../release/
+	cp -p ./cps-driver.ko $(CPS_DRIVER_REELASE_DIR)
 	
 clean:
 	rm -rf *.o *~ core .depend .*.cmd *.ko *.mod.c .tmp_versions vtty Module.symvers modules.order 
