--- a/lib/ssi/Makefile
+++ b/lib/ssi/Makefile
@@ -1,32 +1,44 @@
 #CC = gcc
 #LD = ld
-#LIB_DIR=/usr/lib
 CC = arm-linux-gnueabi-gcc
 LD = arm-linux-gnueabi-ld
-LIB_DIR=/usr/arm-linux-gnueabi/lib/
+TARGET=libCpsSsi.so
+OBJ=libcpsssi.o
+SRC=libcpsssi.c
 CFLAGS= -g -Wall
-VERSION =1.0.1
 
-all:libcpsssi.o libCpsSsi.so
+VERSION =1.0.2
 
-libcpsssi.o:	
-	${CC} -z defs libcpsssi.c -c -fPIC -o libcpsssi.o -lm
+# CPS_SDK_MACRO_CHECK ( without CONPROSYS SDK )
+ifneq "$(CPS_SDK_INSTALL_FULLDIR)" ""
+TARGET_ROOTFS   := ${CPS_SDK_INSTALL_FULLDIR}/rootfs
+endif
 
-libCpsSsi.so:
-	${CC} -z defs -shared -O2 -Wl,-soname,libCpsSsi.so -o libCpsSsi.so.$(VERSION) libcpsssi.o -lm
+ifneq "$(CPS_SDK_ROOTDIR)" ""
+INCLUDE= -I$(CPS_SDK_ROOTDIR)/driver/cps-drivers/include
+EXTRA_CFLAGS	+= -DCONFIG_CONPROSYS_SDK
+CPS_LIB_REELASE_DIR:=../../release
+else
+INCLUDE= -I../../include/
+CPS_LIB_REELASE_DIR:=../release
+endif
+
+all:$(OBJ) ${TARGET}
+
+$(OBJ):	
+	${CC} ${INCLUDE} ${LD_FLAGS} $(SRC) -c -fPIC -o $(OBJ) -lm
+
+$(TARGET):
+	${CC} ${INCLUDE} ${LD_FLAGS}  -shared -O2 -Wl,-soname,$(TARGET) -o $(TARGET) $(OBJ) -lm
 
 install:
-	cp libCpsSsi.so.$(VERSION) $(LIB_DIR)
-	ldconfig
-
-install-cross:
-	rm -f libCpsSsi.so
-	ln -s libCpsSsi.so.$(VERSION) libCpsSsi.so
-	cp libCpsSsi.so.$(VERSION) $(LIB_DIR)
-	mv libCpsSsi.so $(LIB_DIR)
+	cp -p $(TARGET) $(TARGET_ROOTFS)/usr/local/lib/$(TARGET).$(VERSION)
+	@if [ ! -f $(TARGET_ROOTFS)/usr/local/lib/$(TARGET) ]; then \
+	( cd $(TARGET_ROOTFS)/usr/local/lib/ && ln -s $(TARGET).$(VERSION) $(TARGET) ) \
+	fi
 
 release_copy:
-	cp ./libCpsSsi.so.$(VERSION) ../release/
+	cp -p ./$(TARGET) $(CPS_LIB_REELASE_DIR)/$(TARGET).$(VERSION)
 
 clean:
-	rm -f *.o *.so *.so.$(VERSION)
+	rm -f $(OBJ) $(TARGET)
