27, Sep, 2016 : topic branch : (1) Counter Driver / Library / Sample Added. (2) cpsaio / libcpsaio bugfix source code. (3) libcpsdio  bugfix source code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,40 @@
-*.[ao]
-*.so.*
+# Object files
+*.o
 *.ko
+*.obj
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+
 help/
 driver/ctrl/
-driver/release/
-lib/release/
-driver/cnt/
-lib/cnt/
+driver/release/**/*
+lib/release/**/*
 sample/ssi/etc/
-sample/cnt/
-
+sample/aio/etc/
