--- a/sample/aio/Makefile
+++ b/sample/aio/Makefile
@@ -18,9 +18,9 @@ SRC_NAME010=CalibClearAo
 SRC_NAME011=samplingAi
 SRC_NAME012=maxchannel
 SRC_NAME013=ao_ts
+SRC_NAME014=samplingAi2
 
-
-all:${SRC_NAME001}.o ${SRC_NAME002}.o ${SRC_NAME003}.o ${SRC_NAME004}.o ${SRC_NAME005}.o ${SRC_NAME006}.o ${SRC_NAME007}.o ${SRC_NAME008}.o ${SRC_NAME009}.o ${SRC_NAME010}.o ${SRC_NAME011}.o ${SRC_NAME012}.o ${SRC_NAME013}.o
+all:${SRC_NAME001}.o ${SRC_NAME002}.o ${SRC_NAME003}.o ${SRC_NAME004}.o ${SRC_NAME005}.o ${SRC_NAME006}.o ${SRC_NAME007}.o ${SRC_NAME008}.o ${SRC_NAME009}.o ${SRC_NAME010}.o ${SRC_NAME011}.o ${SRC_NAME012}.o ${SRC_NAME013}.o ${SRC_NAME014}.o
 
 ${SRC_NAME001}.o:
 	${CC} -o ${SRC_NAME001} ${SRC_NAME001}.c -l$(LIBCPSNAME) -lm
@@ -61,6 +61,10 @@ ${SRC_NAME012}.o:
 ${SRC_NAME013}.o:
 	${CC} -o ${SRC_NAME013} ${SRC_NAME013}.c -l$(LIBCPSNAME) -lm
 
+${SRC_NAME014}.o:
+	${CC} -o ${SRC_NAME014} ${SRC_NAME014}.c -l$(LIBCPSNAME) -lm
+
+
 clean:
-	rm -f ${SRC_NAME001} ${SRC_NAME002} ${SRC_NAME003} ${SRC_NAME004} ${SRC_NAME005} ${SRC_NAME006} ${SRC_NAME007} ${SRC_NAME008} ${SRC_NAME009} ${SRC_NAME010} ${SRC_NAME011} ${SRC_NAME012} ${SRC_NAME013}
+	rm -f ${SRC_NAME001} ${SRC_NAME002} ${SRC_NAME003} ${SRC_NAME004} ${SRC_NAME005} ${SRC_NAME006} ${SRC_NAME007} ${SRC_NAME008} ${SRC_NAME009} ${SRC_NAME010} ${SRC_NAME011} ${SRC_NAME012} ${SRC_NAME013} ${SRC_NAME014}
 
