--- a/driver/cnt/Makefile
+++ b/driver/cnt/Makefile
@@ -18,7 +18,7 @@ ifeq "$(CPS_SDK_ROOTDIR)" ""
 KERNELDIR ?= /home/contec/workspace/sdk/CPS_SDK/kernel #target kernel source path ( static path )
 #KERNELDIR ?= ~/CPS_SDK/kernel #target kernel source path ( static path )
 #EXTRA_CFLAGS	+= -DCPSCNT_DIRECT_INOUT_MODE
-CPS_DRIVER_REELASE_DIR:=../release/
+CPS_DRIVER_REELASE_DIR:=../release/mcs341/
 else
 KERNELDIR ?= $(CPS_SDK_ROOTDIR)/kernel
 CPS_DRIVER_REELASE_DIR:=../../release/
