--- a/sample/dio/Makefile
+++ b/sample/dio/Makefile
@@ -1,9 +1,24 @@
 #CC = gcc
 CC = arm-linux-gnueabi-gcc
+LD = arm-linux-gnueabi-ld
 
-all:dio.o
+INC = -I../../include/
+BAT = -DCONFIG_DIO_BL
 
-dio.o:	
-	${CC} -o dio dio.c -lCpsDio
+LIBCPSNAME=CpsDio
+
+SRC_NAME001=dio
+SRC_NAME002=dio_bl
+
+all:${SRC_NAME001}.o ${SRC_NAME002}.o
+
+
+
+${SRC_NAME001}.o:	
+	${CC} ${INC} -o ${SRC_NAME001} ${SRC_NAME001}.c -l$(LIBCPSNAME)
+
+${SRC_NAME002}.o:
+	${CC} ${INC} -o ${SRC_NAME002} ${BAT} ${SRC_NAME001}.c -l$(LIBCPSNAME)
+
 clean:
-	rm -f dio
+	rm -f ${SRC_NAME001} ${SRC_NAME002} 
