Bugfix#4 Add Attribute Mode and re:insmod bugfixed. (#24)
15, Aug, 2017 : 
driver:
<all>
(1) Change Makefile Cross_Compile from "=" to ":=". (#26)
(2) xxx query device name (#25)
<cps-driver>
(1) rmmod後,再insmodを行うときに デバイスノードが作成されない問題を修正
(2) MODULE_ALIAS からMODULE_DESCRIPTIONに変更
(3) MODULE_PARM_DESCを追加
(4) Added DRIVER_ATTR ,
contec_mcs341_create_driver_sysfs,contec_mcs341_remove_driver_sysfs and
any more. (#23)
<cpsssi>
(1) Add IOCTL_CPSSSI_GET_DEVICE_NAME ioctl code.

library:
(1) Add xxxQueryDeviceName function in many libraries.

sample
(1) It adds shell script of the system sample.
(2) The code of "ai.c" addes ContecCpsAioReadAiCalibrationData and
ContecCpsAioSetAiCalibrationData function.
(3) Add Makefike -I option.
(4) Add queryDeviceName sample.
(5) When make clean is run, queryDeviceName is not clear.

other:
(1) Add travis ci file (.travis.yml) (#27)
(2) Fix technical-report.

--- a/driver/com/Makefile
+++ b/driver/com/Makefile
@@ -3,7 +3,7 @@ obj-m := 8250_cpscom.o
 PWD       := $(shell pwd)
 
 #cross build 
-CROSS_COMPILE=arm-linux-gnueabi-
+CROSS_COMPILE:=arm-linux-gnueabi-
 ARCH=arm
 
 # CPS_SDK_MACRO_CHECK ( without CONPROSYS SDK )
