--- a/driver/system/Makefile
+++ b/driver/system/Makefile
@@ -4,7 +4,7 @@ obj-m := cps-driver.o
 PWD       := $(shell pwd)
 
 #cross build 
-CROSS_COMPILE=arm-linux-gnueabi-
+CROSS_COMPILE:=arm-linux-gnueabi-
 ARCH=arm
 
 # CPS_SDK_MACRO_CHECK ( without CONPROSYS SDK )
