--- a/sample/dio/Makefile
+++ b/sample/dio/Makefile
@@ -11,6 +11,7 @@ SRC_NAME001=dio
 SRC_NAME002=dio_int_test
 SRC_NAME003=dio_test
 SRC_NAME004=dio_loop
+SRC_NAME005=queryDeviceName
 
 BIN_NAME001=${SRC_NAME001}
 BIN_NAME002=${SRC_NAME001}_bl
@@ -20,8 +21,9 @@ BIN_NAME005=${SRC_NAME003}
 BIN_NAME006=${SRC_NAME003}_bl
 BIN_NAME007=${SRC_NAME004}
 BIN_NAME008=${SRC_NAME004}_bl
+BIN_NAME009=${SRC_NAME005}
 
-all:${BIN_NAME001}.o ${BIN_NAME002}.o ${BIN_NAME003}.o ${BIN_NAME004}.o ${BIN_NAME005}.o ${BIN_NAME006}.o ${BIN_NAME007}.o ${BIN_NAME008}.o
+all:${BIN_NAME001}.o ${BIN_NAME002}.o ${BIN_NAME003}.o ${BIN_NAME004}.o ${BIN_NAME005}.o ${BIN_NAME006}.o ${BIN_NAME007}.o ${BIN_NAME008}.o ${BIN_NAME009}.o
 
 ${BIN_NAME001}.o:	
 	${CC} ${INC} -o ${BIN_NAME001} ${SRC_NAME001}.c -l$(LIBCPSNAME)
@@ -47,6 +49,8 @@ ${BIN_NAME007}.o:
 ${BIN_NAME008}.o:
 	${CC} ${INC} -o ${BIN_NAME008} ${BAT} ${SRC_NAME004}.c -l$(LIBCPSNAME)
 
+${BIN_NAME009}.o:
+	${CC} ${INC} -o ${BIN_NAME009} ${SRC_NAME005}.c -l$(LIBCPSNAME)
 
 clean:
-	rm -f ${BIN_NAME001} ${BIN_NAME002} ${BIN_NAME003} ${BIN_NAME004}  ${BIN_NAME005}.o ${BIN_NAME006}.o ${BIN_NAME007}.o ${BIN_NAME008}.o
+	rm -f ${BIN_NAME001} ${BIN_NAME002} ${BIN_NAME003} ${BIN_NAME004} ${BIN_NAME005} ${BIN_NAME006} ${BIN_NAME007} ${BIN_NAME008} ${BIN_NAME009}
