--- a/sample/ssi/CalibCommand/Makefile
+++ b/sample/ssi/CalibCommand/Makefile
@@ -1,16 +1,18 @@
 #CC = gcc
 CC = arm-linux-gnueabi-gcc
 
+INC = -I../../../include/
+
 all:CalibWrite.o CalibRead.o CalibClear.o
 
 CalibWrite.o:
-	${CC} -o CalibWrite CalibWrite.c -lCpsSsi -lm
+	${CC} ${INC} -o CalibWrite CalibWrite.c -lCpsSsi -lm
 
 CalibRead.o:
-	${CC} -o CalibRead CalibRead.c -lCpsSsi -lm
+	${CC} ${INC} -o CalibRead CalibRead.c -lCpsSsi -lm
 
 CalibClear.o:
-	${CC} -o CalibClear CalibClear.c -lCpsSsi -lm
+	${CC} ${INC} -o CalibClear CalibClear.c -lCpsSsi -lm
 
 clean:
 	rm -f ssi CalibWrite CalibRead CalibClear
